# wayca-scheduler

./: CMakeLists.txt  Makefile  README.en.md  README.md  cmake_uninstall.cmake  common.h  deployd.c  deployer.c  irqdeploy.c  irqdump.c  migration_cost.py  perf.c  taskdeploy.c
example/: auto_tasks_ccl.cfg  ccl_auto.c  coarse_tasks.cfg  managed_thread.c  managed_threads.cfg  wayca-deployd.cfg
include/: wayca-scheduler.h
kernel/migration_cost/: Makefile  migration_cost.c
lib/: bitmap.h  bitops.h  common.h  group.c  irq.c  log.c  log.h  managed_threads.c  math.h  mem.c  threads.c  topo.c  topo.h  wayca_thread.h
test/: CMakeLists.txt  autoTest.sh  wayca_bitmap.c  wayca_group.c  wayca_sc_group.c  wayca_thread.c  wayca_threadpool.c  wayca_topo.c
tools/: CMakeLists.txt  Makefile  README.md  base.sh  benchloop.sh  bgbenching.sh  bgstream.sh  functions.c  lat_pipe  lock-bench.sh  lock_test  log.0316.txt  log.lat_mem_rd.NUMA.1.txt  log.lat_mem_rd.NUMA.2.txt  log.lat_mem_rd.P4.1.txt  log.lat_mem_rd.P4.2.txt  log.lat_syscall.txt  log.stream.P4.1.txt  log.stream.P4.2.txt  log4.lat_mem_rd.txt  test.sh  unified-bench.sh
tools/kp920.2P.6CCL/: Hardware_Param_Digging_6CCL.xlsx  NUMA_membind0123_6CCL.xlsx  README.md  log.lock-bench.0427.filtered.txt  log.mem-band.0403.filtered.txt  log.mem-band.0403.numa.filtered.txt  log.mem-band.0404.numa.filtered.txt  log.mem-band.0404.numa.interleave.filtered.txt  log.mem-band.0412.filtered.txt  log.mem-band.0419.numa.filtered.txt  log.mem-band.0427.6jobs.filtered.txt  log.mem-band.0427.numa.interleave.filtered.txt  log.pipe-latency.0404.filtered.txt
tools/kp920.2P.8CCL/: Hardware_Param_Digging_8CCL.xlsx
tools/kp920.2P.8CCL.type2/: NUMA_membind0123_8CCL.xlsx  README.md  log.mem-bandwidth.0420.8ccl.filtered.txt  log.mem-bandwidth.interleave.0425.filtered.txt  log.pipe.lock.0420.8ccl.filtered.txt
tools/kp920.2P.8CCL.type4/: Hardware_Param_Digging_8CCL.type4.xlsx  NUMA_membind0123_8CCL.type4.xlsx  log.mem-band.0512.txt  log.pipe.lock.latency.0512.txt
tools/wayca-calibration/: __init__.py  wayca_calibration.conf  wayca_calibration.py
tools/wayca-lstopo/: wayca_lstopo.conf  wayca_lstopo.py
tools/wayca-memory-bench/: wayca-memory-bench.c
tools/wayca-sc-info/: wayca_sc_info.c  wayca_sc_info.h  wayca_sc_topo.c
